--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -9,3 +9,4 @@ VITE_VLAYER_AVERAGE_BALANCE_ADDRESS="0x2C244c18b9D4E24Ad3f21e6BA7bFE0fFa492aB05"
 VITE_EVAULT="0x521555e6cf3a0062D22b6D08aAFc2F3a4761B8e2"
 VITE_EVAULT_JUNIOR="0x9D075E2EA814ba0537607aD657a80fCd8f7ce131"
 VITE_USDC="0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
+VITE_CREDIT_MANAGER_ADDRESS="0xf100c356aF3DC43DBB6bb3d62D4eE915E98cc8a9"
