update vars on dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,9 +23,14 @@ ENV VITE_PUBLIC_VLAYER_PROVER_URL="https://stable-prod-prover.vlayer.xyz"
 
 ENV VITE_VLAYER_AVERAGE_BALANCE_ADDRESS="0x2C244c18b9D4E24Ad3f21e6BA7bFE0fFa492aB05"
 
-ENV VITE_EVAULT="0x521555e6cf3a0062D22b6D08aAFc2F3a4761B8e2"
-ENV VITE_EVAULT_JUNIOR="0x9D075E2EA814ba0537607aD657a80fCd8f7ce131"
-ENV VITE_USDC="0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
+ENV VITE_LEND_MARKET="0x7913Be3D248E8Fc629F3F40a9e892A0D9ea04888"
+ENV VITE_IRM="0x00F382A1E79b4159071faF7a608bD3F987cb9501"
+ENV VITE_JUSDC="0x59987FD269ebf4Ec808410ad8b37E2bda879eC23"
+ENV VITE_SUSDC="0x8c0a45A1a3442F6Bc3aB553942139BB575036Ab1"
+ENV VITE_RISK_MANAGER_SHIM="0xd062766dB617A1C48CE6D4017776A4554DcE62CB"
+ENV VITE_EVAULT_ADAPTER="0xd0602be1b9c3ED0715Be5786AD34114D9Da737BD"
+ENV VITE_USDC="0x5ba1B40c2503B716BCB67c439A63BBfe3071147d"
+ENV VITE_CREDIT_MANAGER_ADDRESS="0x87B6F2A7A9e371f93bBbE75926400699202B8a58"
 
 RUN yarn build
 
